[Swagger] fix person
