# other/controllers/Person.js
@@ -24,15 +24,3 @@ module.exports.getPersonByRole = function getPersonByRole (req, res, next) {
       utils.writeJson(res, response);
     });
 };
-
-module.exports.peopleGET = function peopleGET (req, res, next) {
-  var offset = req.swagger.params['offset'].value;
-  var limit = req.swagger.params['limit'].value;
-  Person.peopleGET(offset,limit)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
